samples/_failures_safe/1761346416_f0a691_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a0a16584.c: In function ‘parser_parse_expression’:
./samples/SAFE/__tmp_a0a16584.c:154: error: expected ‘)’ at end of input
./samples/SAFE/__tmp_a0a16584.c:153:24: note: to match this ‘(’
  153 |                 fprintf(stderr
      |                        ^
./samples/SAFE/__tmp_a0a16584.c:153:17: error: too few arguments to function ‘fprintf’
  153 |                 fprintf(stderr
      |                 ^~~~~~~
In file included from /usr/include/stdio.h:980,
                 from ./samples/SAFE/__tmp_a0a16584.c:2:
/usr/include/x86_64-linux-gnu/bits/stdio2.h:77:1: note: declared here
   77 | fprintf (FILE *__restrict __stream, const char *__restrict __fmt, ...)
      | ^~~~~~~
./samples/SAFE/__tmp_a0a16584.c:153:17: error: expected declaration or statement at end of input
  153 |                 fprintf(stderr
      |                 ^~~~~~~
./samples/SAFE/__tmp_a0a16584.c:153:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a0a16584.c:153:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a0a16584.c:153:17: error: expected declaration or statement at end of input
